# go-symbol

./: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
cmake/: go-symbol-config.cmake.in
include/go/: binary.h  endian.h  version.h
include/go/binary/: binary.h
include/go/symbol/: build_info.h  interface.h  reader.h  symbol.h
src/: binary.cpp  version.cpp
src/binary/: binary.cpp
src/symbol/: build_info.cpp  interface.cpp  reader.cpp  symbol.cpp
